--- a/module3-sol/index.html
+++ b/module3-sol/index.html
@@ -63,6 +63,18 @@
             Originally, people got food as hunter-gatherers. The agricultural revolution changed that. Farmers grew crops including those invented and improved by selective breeding.[3] These improvements, for example the invention of maize, allowed feeding more people, and further improvements gave it a better taste.
 
             Food shortage has been a big problem throughout history. Many people do not have enough money to buy the food that they need. Bad weather or other problems sometimes destroy the growing food in one part of the world. When people do not have enough food, we say that they are hungry. If they do not eat enough food for a long time, they will become sick and die from starvation. In areas where many people do not have enough food, we say that there is famine there.
+            Food is what people and animals eat to live. Every organism needs energy to carry on with the process of living which comes from food. Food usually comes from animals and plants. It is eaten by living things to provide energy and nutrition.[1] Food contains the nutrition that people and animals need to be healthy. The consumption of food is normally enjoyable to humans.
+            It contains protein, fat, carbohydrates, vitamins, water and minerals.[2] Liquids used for energy and nutrition are often    called "drinks". If someone cannot afford food they go hungry.
+
+            Food for humans is mostly made through farming or gardening. It includes animal and vegetable sources. Some people refuse to eat food from animal origin, like meat, eggs, and products with milk in them. Not eating meat is called vegetarianism. Not eating or using any animal products is called veganism.
+            Food produced by farmers or gardeners can be changed by industrial processes (the food industry). Processed food usually contains several natural ingredients and food additives (such as preservatives, antioxidants, emulsifiers, flavor enhancers). For example, bread is processed food.
+
+            Food processing at home is done in the kitchen, by the cook. The cook sometimes uses a cookbook. Examples of cooking utensils are pressure cookers, pots, and frying pans.Food can also be prepared and served in restaurants or refectory (in particular for children in school).The utensils used may be a plate, knife, fork, chopsticks, spoon, bowl, or spork.Many people do not grow their own food. They have to buy food that was grown by someone else. People buy most of their food in shops or markets. But some people still grow most or all of their own food.
+            People may buy food and take it home to cook it. They may buy food that is ready to eat from a street vendor or a restaurant.
+            Other countries have their own way of eating food. An example of an ethnic food is Mexican food.
+            Originally, people got food as hunter-gatherers. The agricultural revolution changed that. Farmers grew crops including those invented and improved by selective breeding.[3] These improvements, for example the invention of maize, allowed feeding more people, and further improvements gave it a better taste.
+
+            Food shortage has been a big problem throughout history. Many people do not have enough money to buy the food that they need. Bad weather or other problems sometimes destroy the growing food in one part of the world. When people do not have enough food, we say that they are hungry. If they do not eat enough food for a long time, they will become sick and die from starvation. In areas where many people do not have enough food, we say that there is famine there.
             </p>
       </div>
     </div>
